ThorLabs_PM100D/PM100D.h



/*===========================================================================

 GLOBAL USER-CALLABLE FUNCTION DECLARATIONS (Exportable Functions)

===========================================================================*/
/*===========================================================================

 Init/close

===========================================================================*/
/*---------------------------------------------------------------------------
 Initialize - This function initializes the instrument driver session and
 returns an instrument handle which is used in subsequent calls.
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC PM100D_init (ViRsrc resourceName, ViBoolean IDQuery, ViBoolean resetDevice, ViPSession instrumentHandle);


/*---------------------------------------------------------------------------
 Close an instrument driver session
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC PM100D_close (ViSession instrumentHandle);


/*===========================================================================

 Resource Functions.

===========================================================================*/
ViStatus _VI_FUNC PM100D_findRsrc (ViSession instrumentHandle, ViUInt32 *resourceCount);

ViStatus _VI_FUNC PM100D_getRsrcName (ViSession instrumentHandle, ViUInt32 index, ViChar resourceName[]);

ViStatus _VI_FUNC PM100D_getRsrcInfo (ViSession instrumentHandle, ViUInt32 index, ViChar modelName[], ViChar serialNumber[], ViChar manufacturer[], ViBoolean *deviceAvailable);


/*===========================================================================
 Subclass: Configuration Functions - Sense - Correction
===========================================================================*/
/*---------------------------------------------------------------------------
 Set/get attenuation
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC PM100D_setAttenuation (ViSession instrumentHandle, ViReal64 attenuation);

ViStatus _VI_FUNC PM100D_getAttenuation (ViSession instrumentHandle, ViInt16 attribute, ViPReal64 attenuation);


/*---------------------------------------------------------------------------
 Set/get wavelength
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC PM100D_setWavelength (ViSession instrumentHandle, ViReal64 wavelength);

ViStatus _VI_FUNC PM100D_getWavelength (ViSession instrumentHandle, ViInt16 attribute, ViPReal64 wavelength);


/*===========================================================================
 Subclass: Configuration Functions - Sense - Power
===========================================================================*/
/*---------------------------------------------------------------------------
 Set/get power range auto
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC PM100D_setPowerAutoRange (ViSession instrumentHandle, ViBoolean powerAutorangeMode);

ViStatus _VI_FUNC PM100D_getPowerAutorange (ViSession instrumentHandle, ViPBoolean powerAutorangeMode);

/*---------------------------------------------------------------------------
 Set/get power range
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC PM100D_setPowerRange (ViSession instrumentHandle, ViReal64 power_to_Measure);

ViStatus _VI_FUNC PM100D_getPowerRange (ViSession instrumentHandle, ViInt16 attribute, ViPReal64 powerValue);


/*---------------------------------------------------------------------------
 Set/get power reference value
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC PM100D_setPowerRef (ViSession instrumentHandle, ViReal64 powerReferenceValue);

ViStatus _VI_FUNC PM100D_getPowerRef (ViSession instrumentHandle, ViInt16 attribute, ViPReal64 powerReferenceValue);


/*---------------------------------------------------------------------------
 Set/get power reference state
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC PM100D_setPowerRefState (ViSession instrumentHandle, ViBoolean powerReferenceState);

ViStatus _VI_FUNC PM100D_getPowerRefState (ViSession instrumentHandle, ViPBoolean powerReferenceState);

/*---------------------------------------------------------------------------
 Set/get power unit
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC PM100D_setPowerUnit (ViSession instrumentHandle, ViInt16 powerUnit);

ViStatus _VI_FUNC PM100D_getPowerUnit (ViSession instrumentHandle, ViPInt16 powerUnit);


/*---------------------------------------------------------------------------
 Measure power
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC PM100D_measPower (ViSession instrumentHandle, ViPReal64 power);


/*===========================================================================

 Sensor Information.

 ===========================================================================*/
/*---------------------------------------------------------------------------
 Get sensor information
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC PM100D_getSensorInfo (ViSession instr, ViChar _VI_FAR name[], ViChar _VI_FAR snr[], ViChar _VI_FAR message[], ViPInt16 pType, ViPInt16 pStype, ViPInt16 pFlags);


/*---------------------------------------------------------------------------
 Get error description. 
 This function translates the error return value from the instrument driver
 into a user-readable string.
---------------------------------------------------------------------------*/
ViStatus _VI_FUNC PM100D_errorMessage (ViSession instrumentHandle, ViStatus statusCode, ViChar _VI_FAR description[]);